7/24 Fixed whitespace issue

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ html, body, #root {
   width: 100%;
   margin: 0px;
   display: flex;
-
+  overflow: hidden;
 }
 
 .background_container {
